recursion.logo.lessons.recursion.logo.square.FourSquare.scala.code
override def run() {
  drawSquare()
}

def drawSquare() {
  forward(100)
  right()
  forward(100)
  right()
  forward(100)
  right()
  forward(100)
  right()
}